// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkmapWidget > drops labels before squeezing titles on narrow widths (snapshot) 1`] = `
"✦  Keep human and Age[0m...[0m
⎇  Implementation is [0m...[0m
◆  Use session-global[0m...[0m
└─ ◎  Render the pers[0m...[0m
•  Tree navigation mu[0m...[0m
◆  Which labels stay [0m...[0m"
`;

exports[`WorkmapWidget > keeps labels right-aligned when there is room (snapshot) 1`] = `
"✦  Keep human and Agent aligned                    long-term
⎇  Implementation is becoming a todo manager        detected
◆  Use session-global snapshots                       chosen
└─ ◎  Render the persistent widget                    active
•  Tree navigation must not roll back the map
◆  Which labels stay readable on narrow term[0m...[0m  considering"
`;

exports[`WorkmapWidget > renders past the former compact budget without hidden counts (snapshot) 1`] = `
"✦  Keep human and Agent aligned                                      long-term
⎇  Implementation is becoming a todo manager                          detected
◆  Use session-global snapshots                                         chosen
└─ ◎  Render the persistent widget                                      active
•  Tree navigation must not roll back the map
◆  Which labels stay readable on narrow terminals?                 considering
◎  Extra task one
◎  Extra task two
◎  Extra task three"
`;

exports[`WorkmapWidget > renders the full tree at standard width (snapshot) 1`] = `
"✦  Keep human and Agent aligned                                      long-term
⎇  Implementation is becoming a todo manager                          detected
◆  Use session-global snapshots                                         chosen
└─ ◎  Render the persistent widget                                      active
•  Tree navigation must not roll back the map
◆  Which labels stay readable on narrow terminals?                 considering"
`;
